--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,10 +1,131 @@
 body {
     background-color: #DCDCDC;
     color: black;
+    min-height: 100vh;
+    display: flex;
+    flex-direction: column;
+
+}
+
+* {
+    box-sizing: border-box;
+}
+
+html,
+body,
+div,
+img {
+    margin: 0;
+    padding: 0;
+    border: 0;
+    font-size: 100%;
+    font: inherit;
+    vertical-align: baseline;
+}
+
+body {
+    line-height: 1;
+}
+
+.full-game-area {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    margin-left: auto;
+    margin-right: auto;
+
+
 }
 
 img {
-    max-width: 800px;
-    max-height: 800px;
-    float: center;
+    margin-top: 20px;
+    width: 100%;
+    max-height: 500px;
+    display: flex;
+
+}
+
+.game-question {
+
+    margin-top: 40px;
+    display: flex;
+    justify-content: center;
+}
+
+h1 {
+    width: 100%;
+    text-align: center;
+    font-size: large;
+}
+
+.game-buttons {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    margin-top: 20px;
+    padding-right: 50px;
+    padding-left: 50px;
+    margin-bottom: 20px;
+
+}
+
+.btn-1,
+.btn-2,
+.btn-3 {
+    height: 65px;
+    width: 140px;
+}
+
+
+.game-tracking-area {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    margin-top: 20px;
+    padding-left: 50px;
+    padding-right: 50px;
+}
+
+footer {
+    margin-top: auto;
+    text-align: center;
+    background-color: black;
+    color: white;
+    height: 30px;
+}
+
+@media only screen and (min-width: 320px) and (max-width: 520px) {
+    .full-game-area {
+        width: 87.5%;
+    }
+
+    .btn-1,
+    .btn-2,
+    .btn-3 {
+        height: 30px;
+        width: 110px;
+        font-size: 9px;
+    }
+
+    .btn-2 {
+        margin-left: 6px;
+        margin-right: 6px;
+
+    }
+}
+
+
+@media only screen and (min-width: 520px) and (max-width: 780px) {
+
+    .full-game-area {
+        width: 90%;
+    }
+
+    .btn-1,
+    .btn-2,
+    .btn-3 {
+        height: 45px;
+        width: 120px;
+        font-size: 11px;
+    }
 }
