--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -66,6 +66,7 @@ h1 {
     padding-right: 50px;
     padding-left: 50px;
     margin-bottom: 20px;
+    transition: background-color 400ms ease;
 
 }
 
