--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -164,6 +164,10 @@ footer {
     padding: 5px;
 }
 
+#popup {
+    display:none;
+}
+
 
 @media only screen and (min-width: 320px) and (max-width: 520px) {
     .full-game-area {
