--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,5 +1,5 @@
 body {
-    background-color: #DCDCDC;
+    background-color: #eddcdc;
     color: black;
     min-height: 100vh;
     display: flex;
@@ -68,7 +68,7 @@ img {
     font-size: 20px;
     font-weight: bold;
     color: black;
-    background-color: #DCDCDC;
+    background-color: #f3e6e6;
     border: 1px solid black;
     border-radius: 10px;
     margin-left: auto;
@@ -94,9 +94,9 @@ h1 {
 .btn {
     height: 65px;
     width: 140px;
-    box-shadow: 0 0 0 2px #DCDCDC;
+    box-shadow: 0 0 0 2px #f3e6e6;
     border-radius: 10px;
-    background-color: #DCDCDC;
+    background-color: #f3e6e6;
 }
 
 .dynamic-tracking-objects {
@@ -114,6 +114,7 @@ h1 {
     margin-top: 20px;
     padding-left: 50px;
     padding-right: 50px;
+    
 }
 
 footer {
@@ -128,7 +129,7 @@ footer {
     color: black;
     font-size: 20px;
     font-weight: bold;
-    background-color: #DCDCDC;
+    background-color: #f3e6e6;
     border: 1px solid black;
     border-radius: 10px;
     padding: 5px;
@@ -138,7 +139,7 @@ footer {
     color: black;
     font-size: 20px;
     font-weight: bold;
-    background-color: #DCDCDC;
+    background-color: #f3e6e6;
     border: 1px solid black;
     border-radius: 10px;
     padding: 5px;
@@ -148,7 +149,7 @@ footer {
     color: black;
     font-size: 20px;
     font-weight: bold;
-    background-color: #DCDCDC;
+    background-color: #f3e6e6;
     border: 1px solid black;
     border-radius: 10px;
     padding: 5px;
@@ -158,7 +159,7 @@ footer {
     color: black;
     font-size: 20px;
     font-weight: bold;
-    background-color: #DCDCDC;
+    background-color: #f3e6e6;
     border: 1px solid black;
     border-radius: 10px;
     padding: 5px;
@@ -166,6 +167,89 @@ footer {
 
 #popup {
     display:none;
+    background-color:#f3e6e6;
+    position:absolute;
+    transform:translate(-50%,-50%);
+    top:50%;
+    left:50%;
+    width:560px;
+    height:680px;
+    box-shadow: -3px -3px 7px #fffdfdcc,3px 3px 5px rgba(15, 17, 19, 0.342);
+    border-radius: 10px;
+    border: 1px solid black;
+    }
+
+form {
+    text-align:center;
+}
+
+#name {
+    margin-top: 60px;
+    margin-bottom: 20px;
+    width: 160px;
+    height: 30px;
+    font-size: 14px;
+    border-radius: 10px;
+    border: 1px solid black;
+    background-color:#f3e6e6;
+}
+
+#email {
+    margin-top: 20px;
+    margin-bottom: 80px;
+    width: 160px;
+    height: 30px;
+    font-size: 14px;
+    border-radius: 10px;
+    border: 1px solid black;
+    background-color:#f3e6e6;
+}
+
+#score-text {
+    margin-top: 20px;
+    margin-bottom: 20px;
+    text-align:center;
+    font-size: 20px;
+    
+}
+#final-score-text {
+    margin-top: 60px;
+    margin-bottom: 20px;
+    text-align:center;
+    font-size: 20px;
+}
+
+#final-score {
+    margin-top: 20px;
+    margin-bottom: 60px;
+    text-align:center;
+    font-size: 20px;
+}
+
+#submit {
+    display:block;
+    width:120px;
+    height:25px;
+    background-color: #f3e6e6;
+    box-shadow: -3px -3px 7px #fffdfdcc,3px 3px 5px rgba(10, 12, 15, 0.342);
+    text-align:center;
+    font-size:14px;
+    line-height:20px;
+    cursor:pointer;
+    border-radius: 10px;
+    border: 1px solid black;
+    margin-left:auto;
+    margin-right:auto;
+    margin-top:100px;
+    text-decoration:none;
+    color:black;
+
+}
+#submit:hover {
+    background-color:white;
+}
+#submit:focus {
+    background-color:#f3e6e6;
 }
 
 
