--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -205,13 +205,6 @@ form {
     background-color:#f3e6e6;
 }
 
-#score-text {
-    margin-top: 20px;
-    margin-bottom: 20px;
-    text-align:center;
-    font-size: 20px;
-    
-}
 #final-score-text {
     margin-top: 60px;
     margin-bottom: 20px;
@@ -253,13 +246,13 @@ form {
 }
 
 
-@media only screen and (min-width: 320px) and (max-width: 520px) {
+@media only screen and (min-width: 320px) and (max-width: 540px) {
     .full-game-area {
         width: 87.5%;
     }
 
     .btn {
-        height: 30px;
+        height: 60px;
         width: 110px;
         font-size: 9px;
     }
@@ -269,19 +262,112 @@ form {
         margin-right: 6px;
 
     }
+    .game-question {
+        width: 260px;
+        font-size: 13px;
+    }
+    .game-buttons {
+        justify-content:center;
+        margin-top:2px;
+        margin-bottom: 10px;
+    }
+    .game-area {
+        
+    }
+
+    #game-timer {
+        font-size: 12px;
+
+    }
+    
+    #game-score {
+        font-size: 12px;
+      
+    }
+    
+    #timer-text {
+        font-size: 12px;
+        
+    }
+    
+    #score-text {
+        font-size: 12px;
+        
+    }   
+
+    .static-tracking-objects {
+        justify-content:space-around;
+        margin-top:2px;
+        margin: bottom 10px;
+
+
+    }
+    .dynamic-tracking-objects {
+        justify-content:space-around;      
+        margin-top:0;
+        margin-bottom:10px;
 }
+    img {
+        width: 320px;
+        height: 380px;
+        margin-top:0;
+        margin-bottom:0;
+        margin-left:auto;
+        margin-right:auto;
+    }
+    .image-area {
+        width: 320px;
+        height: 340px;
+        margin-left:auto;
+        margin-right:auto;
+    }
 
-
-@media only screen and (min-width: 520px) and (max-width: 780px) {
+@media only screen and (min-width: 541px) and (max-width: 780px) {
 
     .full-game-area {
         width: 90%;
     }
 
-    .buttonstyling-2 {
+    .btn {
         height: 45px;
         width: 120px;
         font-size: 11px;
     }
-}
 
+    .game-question {
+        width: 380px;
+        font-size: 15px;
+    }
+    .game-buttons {
+        justify-content:center;
+    }
+    .buttonstyling-2 {
+        margin-left: 10px;
+        margin-right: 10px;
+    }
+
+    #game-timer {
+        font-size: 16px;
+    }
+
+    #game-score {   
+        font-size: 16px;
+    }
+
+    #timer-text {
+        font-size: 16px;  
+    }
+
+    #score-text {
+        font-size: 16px;
+          
+    }   
+
+    .static-tracking-objects {
+        justify-content:space-around;
+    }
+    .dynamic-tracking-objects {
+        justify-content:space-around;
+    }
+}
+}
