updated timer, email function. add rules for the game, and polished styling and responsiveness

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -36,7 +36,7 @@ body {
 }
 
 img {
-    margin-top:40px;
+    margin-top: 40px;
     display: flex;
     object-fit: contain;
     margin-left: auto;
@@ -46,7 +46,7 @@ img {
 }
 
 .img-area {
-    
+
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -62,10 +62,10 @@ img {
 .game-question {
 
     margin-top: 40px;
-    text-align:center;
+    text-align: center;
     width: 500px;
     word-wrap: break-word;
-    font-size: 20px;
+    font-size: 19px;
     font-weight: bold;
     color: black;
     background-color: #f3e6e6;
@@ -73,6 +73,10 @@ img {
     border-radius: 10px;
     margin-left: auto;
     margin-right: auto;
+    height:80px;
+    padding-top:7.5px;
+    padding-left:2px;
+    padding-right:2px;
 }
 
 h1 {
@@ -107,6 +111,7 @@ h1 {
     padding-left: 50px;
     padding-right: 50px;
 }
+
 .static-tracking-objects {
     display: flex;
     flex-direction: row;
@@ -114,7 +119,7 @@ h1 {
     margin-top: 20px;
     padding-left: 50px;
     padding-right: 50px;
-    
+
 }
 
 footer {
@@ -166,24 +171,24 @@ footer {
 }
 
 #popup {
-    display:none;
-    background-color:#f3e6e6;
-    position:absolute;
-    transform:translate(-50%,-50%);
-    top:50%;
-    left:50%;
-    width:560px;
-    height:680px;
-    box-shadow: -3px -3px 7px #fffdfdcc,3px 3px 5px rgba(15, 17, 19, 0.342);
+    display: none;
+    background-color: #f3e6e6;
+    position: absolute;
+    transform: translate(-50%, -50%);
+    top: 50%;
+    left: 50%;
+    width: 560px;
+    height: 680px;
+    box-shadow: -3px -3px 7px #fffdfdcc, 3px 3px 5px rgba(15, 17, 19, 0.342);
     border-radius: 10px;
     border: 1px solid black;
-    }
-
-form {
-    text-align:center;
 }
 
-#name {
+form {
+    text-align: center;
+}
+
+#playerName {
     margin-top: 60px;
     margin-bottom: 20px;
     width: 160px;
@@ -191,10 +196,10 @@ form {
     font-size: 14px;
     border-radius: 10px;
     border: 1px solid black;
-    background-color:#f3e6e6;
+    background-color: #f3e6e6;
 }
 
-#email {
+#email-adress{
     margin-top: 20px;
     margin-bottom: 80px;
     width: 160px;
@@ -202,172 +207,313 @@ form {
     font-size: 14px;
     border-radius: 10px;
     border: 1px solid black;
-    background-color:#f3e6e6;
+    background-color: #f3e6e6;
 }
 
 #final-score-text {
     margin-top: 60px;
     margin-bottom: 20px;
-    text-align:center;
+    text-align: center;
     font-size: 20px;
 }
 
 #final-score {
     margin-top: 20px;
     margin-bottom: 60px;
-    text-align:center;
+    text-align: center;
     font-size: 20px;
+}
+#game-rules-header {
+    margin-top: 5px;
+    text-align: center;
+    font-size: 18px;
+}
+#game-rules {
+    margin-bottom: 5px;
+    text-align: center;
+    font-size: 14px;
+}
+
+h4 {
+    margin-top:5px;
+    margin-bottom:5px;
 }
 
 #submit {
-    display:block;
-    width:120px;
-    height:25px;
+    display: block;
+    width: 120px;
+    height: 25px;
     background-color: #f3e6e6;
-    box-shadow: -3px -3px 7px #fffdfdcc,3px 3px 5px rgba(10, 12, 15, 0.342);
-    text-align:center;
-    font-size:14px;
-    line-height:20px;
-    cursor:pointer;
+    box-shadow: -3px -3px 7px #fffdfdcc, 3px 3px 5px rgba(10, 12, 15, 0.342);
+    text-align: center;
+    font-size: 14px;
+    line-height: 20px;
+    cursor: pointer;
     border-radius: 10px;
     border: 1px solid black;
-    margin-left:auto;
-    margin-right:auto;
-    margin-top:100px;
-    text-decoration:none;
-    color:black;
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 100px;
+    text-decoration: none;
+    color: black;
 
 }
+
 #submit:hover {
-    background-color:white;
+    background-color: white;
 }
+
 #submit:focus {
-    background-color:#f3e6e6;
+    background-color: #f3e6e6;
 }
 
 
-@media only screen and (min-width: 320px) and (max-width: 540px) {
+@media only screen and (min-width: 320px) and (max-width: 499px) {
     .full-game-area {
         width: 87.5%;
     }
 
     .btn {
-        height: 60px;
-        width: 110px;
-        font-size: 9px;
-    }
-
+        height: 50px;
+        width: 85px;
+        font-size: 10px;
+        }
     .buttonstyling-2 {
-        margin-left: 6px;
-        margin-right: 6px;
-
+        margin-left:8px;
+        margin-right:8px;
     }
+
     .game-question {
         width: 260px;
-        font-size: 13px;
+        font-size: 10px;
+        margin-top:5px;
+        height:40px;
     }
+
     .game-buttons {
-        justify-content:center;
-        margin-top:2px;
-        margin-bottom: 10px;
-    }
-    .game-area {
+        justify-content: space-evenly;
+        margin-top: 2px;
+        margin-bottom: 20px;
         
+    }
+
+    #game-rules-header {
+        margin-top:10px;
+        font-size:13px;
+    }
+
+    #game-rules {
+        font-size:11px;
     }
 
     #game-timer {
         font-size: 12px;
 
     }
-    
+
     #game-score {
         font-size: 12px;
-      
+
     }
-    
+
     #timer-text {
         font-size: 12px;
-        
+
     }
-    
+
     #score-text {
         font-size: 12px;
-        
-    }   
+
+    }
 
     .static-tracking-objects {
-        justify-content:space-around;
-        margin-top:2px;
+        justify-content: space-around;
+        margin-top: 2px;
         margin: bottom 10px;
 
 
     }
+
     .dynamic-tracking-objects {
-        justify-content:space-around;      
-        margin-top:0;
-        margin-bottom:10px;
-}
+        justify-content: space-around;
+        margin-top: 0;
+        margin-bottom: 10px;
+    }
+
     img {
-        width: 320px;
-        height: 380px;
-        margin-top:0;
-        margin-bottom:0;
-        margin-left:auto;
-        margin-right:auto;
+        width: 300px;
+        height: 240px;
+        margin-top: 2px;
+        margin-bottom: 6px;
+        margin-left: auto;
+        margin-right: auto;
     }
+
     .image-area {
-        width: 320px;
-        height: 340px;
-        margin-left:auto;
-        margin-right:auto;
+        width: 300px;
+        height: 240px;
+        margin-left: auto;
+        margin-right: auto;
     }
-
-@media only screen and (min-width: 541px) and (max-width: 780px) {
-
-    .full-game-area {
-        width: 90%;
+    #popup {
+        width: 310px;
+        height: 520px;
     }
-
-    .btn {
-        height: 45px;
-        width: 120px;
-        font-size: 11px;
+    #submit {
+        margin-top: 20px;
     }
+    #playerName {
+    margin-top:10px;
+    }
+    #email-adress {
+    margin-top:0px;
+}
+}
 
+@media only screen and (min-width: 500px) and (max-width: 619px) {
+
+    img {
+            width: 400px;
+            height: 340px;
+            margin-top: 0;
+            margin-bottom: 0;
+            margin-left: auto;
+            margin-right: auto;
+    }
     .game-question {
-        width: 380px;
-        font-size: 15px;
+            width: 340px;
+            font-size: 13px;
+            margin-top:5px;
+            height:50px;
     }
-    .game-buttons {
-        justify-content:center;
-    }
-    .buttonstyling-2 {
-        margin-left: 10px;
-        margin-right: 10px;
-    }
-
     #game-timer {
-        font-size: 16px;
+            font-size: 13px;
+
     }
 
-    #game-score {   
-        font-size: 16px;
+    #game-score {
+            font-size: 13px;
+
     }
 
     #timer-text {
-        font-size: 16px;  
+            font-size: 13px;
+
     }
 
     #score-text {
-        font-size: 16px;
-          
-    }   
+            font-size: 13px;
+    }
 
     .static-tracking-objects {
-        justify-content:space-around;
+            justify-content: space-around;
+            margin-top: 2px;
+            margin: bottom 10px;
     }
+
     .dynamic-tracking-objects {
-        justify-content:space-around;
+            justify-content: space-around;
+            margin-top: 0;
+            margin-bottom: 10px;
+    }
+    .btn {
+            height: 50px;
+            width: 90px;
+            font-size: 12px;
+    }
+    .game-buttons {
+            margin-top:5px;
+    }
+
+    #game-rules-header {
+            font-size:15px;
+            margin-top:20px;
+    }
+    #game-rules {
+            font-size:12px;
+    }
+    #popup {
+        width: 420px;
+        height: 560px;
+}
+    #submit {
+        margin-top: 20px;
+    }
+    #playerName {
+    margin-top:15px;
+    }
+    #email-adress {
+    margin-top:0px;
     }
 }
-}
+
+ @media only screen and (min-width: 620px) and (max-width: 780px) {
+
+    .full-game-area {
+            width: 90%;
+        }
+
+    .btn {
+            height: 45px;
+            width: 120px;
+            font-size: 11px;
+        }
+
+    .game-question {
+            width: 380px;
+            font-size: 15px;
+        }
+
+    .game-buttons {
+            justify-content: center;
+        }
+
+    .buttonstyling-2 {
+            margin-left: 10px;
+            margin-right: 10px;
+        }
+
+    #game-timer {
+            font-size: 16px;
+        }
+
+    #game-score {
+            font-size: 16px;
+        }
+
+    #timer-text {
+            font-size: 16px;
+        }
+
+    #score-text {
+            font-size: 16px;
+
+        }
+
+    .static-tracking-objects {
+            justify-content: space-around;
+        }
+
+    .dynamic-tracking-objects {
+            justify-content: space-around;
+        } 
+    
+    #popup {
+            width: 460px;
+            height: 580px;
+        }
+
+    .game-question {
+            height:60px;
+            }
+
+    #submit {
+             margin-top: 30px;
+    }
+    #playerName {
+        margin-top:20px;
+    }
+    #email-adress {
+        margin-top:0px;
+    }
+    }
