--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -128,6 +128,7 @@ footer {
     background-color: black;
     color: white;
     height: 30px;
+    padding-top:5px;
 }
 
 #game-timer {
@@ -358,6 +359,11 @@ h4 {
     #popup {
         width: 310px;
         height: 520px;
+        top:30%;
+    }
+    footer {
+        margin-bottom:px;
+        font-size:11px;
     }
     #submit {
         margin-top: 20px;
@@ -435,6 +441,7 @@ h4 {
     #popup {
         width: 420px;
         height: 560px;
+        top:40%;
 }
     #submit {
         margin-top: 20px;
@@ -501,6 +508,7 @@ h4 {
     #popup {
             width: 460px;
             height: 580px;
+            top:45%;
         }
 
     .game-question {
