add favicon, font, SEO-tags and some more styling

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,9 +1,12 @@
+
 body {
-    background-color: #eddcdc;
+    background-color: #f3e6e6;
     color: black;
     min-height: 100vh;
     display: flex;
     flex-direction: column;
+    font-family: "Trirong", serif;
+    line-height: 1;
 }
 
 * {
@@ -18,23 +21,28 @@ img {
     padding: 0;
     border: 0;
     font-size: 100%;
-    font: inherit;
     vertical-align: baseline;
 }
 
-body {
-    line-height: 1;
+#header {
+    width:100%;
+    height:40px;
+    background-color:black;
+    color:white;
 }
 
+.heading {
+    font-size: 1.25rem;
+    text-align:center;
+    padding-top:7.5px;
+}
 .full-game-area {
     display: flex;
     flex-direction: column;
     justify-content: center;
     margin-left: auto;
     margin-right: auto;
-
 }
-
 img {
     margin-top: 40px;
     display: flex;
@@ -69,8 +77,6 @@ img {
     font-weight: bold;
     color: black;
     background-color: #f3e6e6;
-    border: 1px solid black;
-    border-radius: 10px;
     margin-left: auto;
     margin-right: auto;
     height:80px;
