--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,3 +1,4 @@
+/*   Font-family & Styling to keep the footer at the bottom   */
 
 body {
     background-color: #f3e6e6;
@@ -12,7 +13,7 @@ body {
 * {
     box-sizing: border-box;
 }
-
+/*   Also help footer stay below */
 html,
 body,
 div,
@@ -36,6 +37,7 @@ img {
     text-align:center;
     padding-top:7.5px;
 }
+/*   Makes so that game-area stays centered    */
 .full-game-area {
     display: flex;
     flex-direction: column;
@@ -43,6 +45,7 @@ img {
     margin-left: auto;
     margin-right: auto;
 }
+/*   Keeps the image in place and gives it size until media queries  */
 img {
     margin-top: 40px;
     display: flex;
@@ -67,6 +70,7 @@ img {
     border-radius: 10px;
 }
 
+/*   Styling for the game questions     */
 .game-question {
 
     margin-top: 40px;
@@ -90,7 +94,7 @@ h1 {
     text-align: center;
     font-size: large;
 }
-
+/*   Keeps buttons spaced and in a row  */
 .game-buttons {
     display: flex;
     flex-direction: row;
@@ -100,7 +104,7 @@ h1 {
     padding-left: 50px;
     margin-bottom: 20px;
 }
-
+/*     Button style          */
 .btn {
     height: 65px;
     width: 140px;
@@ -108,7 +112,7 @@ h1 {
     border-radius: 10px;
     background-color: #f3e6e6;
 }
-
+/*   Keeps timer and score in a row and spaced     */
 .dynamic-tracking-objects {
     display: flex;
     flex-direction: row;
@@ -136,7 +140,7 @@ footer {
     height: 30px;
     padding-top:5px;
 }
-
+/*   Individual styling for timer            */
 #game-timer {
     color: black;
     font-size: 20px;
@@ -146,7 +150,7 @@ footer {
     border-radius: 10px;
     padding: 5px;
 }
-
+/*    Individual styling for score           */
 #game-score {
     color: black;
     font-size: 20px;
@@ -156,7 +160,7 @@ footer {
     border-radius: 10px;
     padding: 5px;
 }
-
+/*    Ind. styling for text below timer           */
 #timer-text {
     color: black;
     font-size: 20px;
@@ -166,7 +170,7 @@ footer {
     border-radius: 10px;
     padding: 5px;
 }
-
+/*    Ind. styling for text below score           */
 #score-text {
     color: black;
     font-size: 20px;
@@ -176,7 +180,7 @@ footer {
     border-radius: 10px;
     padding: 5px;
 }
-
+/*   Creates the popup-style, gives it a box, keeps in the center      */
 #popup {
     display: none;
     background-color: #f3e6e6;
@@ -194,7 +198,7 @@ footer {
 form {
     text-align: center;
 }
-
+/*   Styles the name-input for the form            */
 #playerName {
     margin-top: 60px;
     margin-bottom: 20px;
@@ -205,7 +209,7 @@ form {
     border: 1px solid black;
     background-color: #f3e6e6;
 }
-
+/*    Styles the email-input for the form           */
 #email-adress{
     margin-top: 20px;
     margin-bottom: 80px;
@@ -216,25 +220,27 @@ form {
     border: 1px solid black;
     background-color: #f3e6e6;
 }
-
+/*   Score display in the popup            */
 #final-score-text {
     margin-top: 60px;
     margin-bottom: 20px;
     text-align: center;
     font-size: 20px;
 }
-
+/*   Score display in the popup            */
 #final-score {
     margin-top: 20px;
     margin-bottom: 60px;
     text-align: center;
     font-size: 20px;
 }
+/*  Header for the rules at the bottom             */
 #game-rules-header {
     margin-top: 5px;
     text-align: center;
     font-size: 18px;
 }
+/*  Style for the rules at the bottom             */
 #game-rules {
     margin-bottom: 5px;
     text-align: center;
@@ -245,7 +251,7 @@ h4 {
     margin-top:5px;
     margin-bottom:5px;
 }
-
+/*   Style for submit button, has a border, cursor animation, removes text-deco from being a link            */
 #submit {
     display: block;
     width: 120px;
@@ -265,16 +271,16 @@ h4 {
     color: black;
 
 }
-
+/*  Hover animation for button         */
 #submit:hover {
     background-color: white;
 }
-
+/*  Click animation for button             */
 #submit:focus {
     background-color: #f3e6e6;
 }
 
-
+/*   Smallest media query            */
 @media only screen and (min-width: 320px) and (max-width: 499px) {
     .full-game-area {
         width: 87.5%;
@@ -381,7 +387,7 @@ h4 {
     margin-top:0px;
 }
 }
-
+/*   medium media query            */
 @media only screen and (min-width: 500px) and (max-width: 619px) {
 
     img {
@@ -459,7 +465,7 @@ h4 {
     margin-top:0px;
     }
 }
-
+/*  Last media query needed, since page was responsive from 780px+ from the start             */
  @media only screen and (min-width: 620px) and (max-width: 780px) {
 
     .full-game-area {
